force-app/main/default/objects/Feedback__c/fields/Picklist_1__c.field-meta.xml
<CustomField>
    <fullName>Picklist_1__c</fullName>
    <label>Picklist 1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PL1Val1</fullName>
            </value>
            <value>
                <fullName>PL1Val2</fullName>
            </value>
            <value>
                <fullName>PL1Val3</fullName>
            </value>
            <value>
                <fullName>PL1Val4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>