force-app/main/default/objects/Feedback__c/fields/Picklist_2__c.field-meta.xml
<CustomField>
    <fullName>Picklist_2__c</fullName>
    <label>Picklist 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Picklist_1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PL2Val1</fullName>
            </value>
            <value>
                <fullName>PL2Val2</fullName>
            </value>
            <value>
                <fullName>PL2Val3</fullName>
            </value>
            <value>
                <fullName>PL2Val4</fullName>
            </value>
            <value>
                <fullName>PL2Val5</fullName>
            </value>
            <value>
                <fullName>PL2Val6</fullName>
            </value>
            <value>
                <fullName>PL2Val7</fullName>
            </value>
            <value>
                <fullName>PL2Val8</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>