force-app/main/default/objects/Feedback__c/fields/Picklist_3__c.field-meta.xml
<CustomField>
    <fullName>Picklist_3__c</fullName>
    <label>Picklist 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Picklist_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PL3Val1</fullName>
            </value>
            <value>
                <fullName>PL3Val2</fullName>
            </value>
            <value>
                <fullName>PL3Val3</fullName>
            </value>
            <value>
                <fullName>PL3Val4</fullName>
            </value>
            <value>
                <fullName>PL3Val5</fullName>
            </value>
            <value>
                <fullName>PL3Val6</fullName>
            </value>
            <value>
                <fullName>PL3Val7</fullName>
            </value>
            <value>
                <fullName>PL3Val8</fullName>
            </value>
            <value>
                <fullName>PL3Val9</fullName>
            </value>
            <value>
                <fullName>PL3Val10</fullName>
            </value>
            <value>
                <fullName>PL3Val11</fullName>
            </value>
            <value>
                <fullName>PL3Val12</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>