force-app/main/default/objects/Feedback__c/fields/requiredfield__c.field-meta.xml
<CustomField>
    <fullName>requiredfield__c</fullName>
    <label>requiredfield</label>
    <length>30</length>
    <type>Text</type>
</CustomField>